--- a/index.html
+++ b/index.html
@@ -1,62 +1,88 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-      <title>
-        Giffinder
-      </title>
-      
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-      <script src="js/script.js" async></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-      <!-- Latest compiled and minified CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-      <link type="text/css" rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
+<head>
+  <title>
+    Giffinder
+  </title>
 
-      <!-- Navigation -->
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-          <div class="container">
-              <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Giffinder</a>
-              </div>
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <div class="col-sm-3 col-md-3 pull-right">
-                      <div class="navbar-form" role="search">
-                        <div class="input-group">
-                          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-                          <div class="input-group-btn">
-                              <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
-                          </div>
-                        </div>
-                    </div>
-                </div>
-              </div>
-              <!-- /.navbar-collapse -->
-          </div>
-          <!-- /.container -->
-      </nav>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="js/script.js" async></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link type="text/css" rel="stylesheet" href="css/style.css" />
+</head>
 
-      <!-- Page Content -->
-      <section>
-        <div class="container"> 
-            <div class="row gallery">
-                  <h3 class="text-center">  Search for a Gif above <br> Your results will display here</h3>
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Giffinder</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="col-sm-3 col-md-3 pull-right">
+          <div class="navbar-form" role="search">
+            <div class="input-group">
+              <input id="input" type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+              <div class="input-group-btn">
+                <button id="button" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+                <button id="clear" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-trash"></span></button>
+              </div>
             </div>
-        </div> 
-      <section>
+          </div>
+        </div>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+
+  <!-- Page Content -->
+  <section id="sec">
+    <div class="container" >
+      <div class="row gallery">
+        <h3 class="text-center"> Search for a Gif above <br> Your results will display here</h3>
+      </div>
+      <center>
+        <div id="results"> </div>
+      </center>
+    </div>
+    <section>
       <!-- Footer -->
       <footer>
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12">
-                      <p>Copyright &copy; Your Website 2017</p>
-                  </div>
-              </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <p>Copyright &copy; Your Website 2018</p>
+            </div>
           </div>
-      </footer>   
-
-  </body>
+        </div>
+      </footer>
+ <!--<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
+ <!--                   <div class="modal-dialog" role="document">-->
+ <!--                       <div class="modal-content">-->
+ <!--                           <div class="modal-header">-->
+ <!--                               <h5 class="modal-title" id="exampleModalLabel"></h5>-->
+ <!--                               <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+ <!--         <span aria-hidden="true">&times;</span>-->
+ <!--       </button>-->
+ <!--                           </div>-->
+ <!--                           <div class="modal-body">-->
+ <!--                               <center>-->
+ <!--                                   <p>Just Scan The Picture </p>-->
+ <!--                               </center>-->
+ <!--                               <center><img src="images/snapcode.jpg" class=" mg-responsive" style="height:200px; width:200px;"></center>-->
+ <!--                           </div>-->
+ <!--                           <div class="modal-footer">-->
+ <!--                               <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>-->
+ <!--                           </div>-->
+ <!--                       </div>-->
+ <!--                   </div>-->
+ <!--               </div>-->
+ <!--           </div>-->
+</body>
 
 </html>
