--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Giffinder</a>
+        <img class="icon" src="https://i.imgur.com/CcIlYcp.gif">
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="col-sm-3 col-md-3 pull-right">
@@ -30,6 +31,7 @@
               <div class="input-group-btn">
                 <button id="button" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
                 <button id="clear" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-trash"></span></button>
+                <button id="modal" class="btn btn-default" data-toggle="modal" data-target="#exampleModal" type="submit"><span class="glyphicon glyphicon-new-window"></span></button>
               </div>
             </div>
           </div>
@@ -42,12 +44,12 @@
 
   <!-- Page Content -->
   <section id="sec">
-    <div class="container" >
+    <div class="container">
       <div class="row gallery">
         <h3 class="text-center"> Search for a Gif above <br> Your results will display here</h3>
       </div>
       <center>
-        <div id="results"> </div>
+        <div class="results"> </div>
       </center>
     </div>
     <section>
@@ -61,28 +63,27 @@
           </div>
         </div>
       </footer>
- <!--<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
- <!--                   <div class="modal-dialog" role="document">-->
- <!--                       <div class="modal-content">-->
- <!--                           <div class="modal-header">-->
- <!--                               <h5 class="modal-title" id="exampleModalLabel"></h5>-->
- <!--                               <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
- <!--         <span aria-hidden="true">&times;</span>-->
- <!--       </button>-->
- <!--                           </div>-->
- <!--                           <div class="modal-body">-->
- <!--                               <center>-->
- <!--                                   <p>Just Scan The Picture </p>-->
- <!--                               </center>-->
- <!--                               <center><img src="images/snapcode.jpg" class=" mg-responsive" style="height:200px; width:200px;"></center>-->
- <!--                           </div>-->
- <!--                           <div class="modal-footer">-->
- <!--                               <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>-->
- <!--                           </div>-->
- <!--                       </div>-->
- <!--                   </div>-->
- <!--               </div>-->
- <!--           </div>-->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+            </div>
+            <div class="modal-body">
+              <center>
+                <div class="results"></div>
+              </center>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
 </body>
 
 </html>
